# trellis

./: .changie.yaml  CHANGELOG.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  build.rs  dist-workspace.toml  install.sh  justfile  release-plz.toml
.changes/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md
.changes/unreleased/: Added-20260711-162553.yaml  Added-20260712-gitdeps.yaml  Added-20260713-212629.yaml  Added-20260713-cli-reference.yaml  Added-20260713-doctor-fix.yaml  Added-20260718-configless-discovery.yaml  Added-20260721-172539.yaml  Breaking-20260713-212629.yaml  Breaking-20260713-212637.yaml  Changed-20260712-globskip.yaml  Changed-20260713-212629.yaml  Changed-20260713-212629b.yaml  Changed-20260713-212637.yaml  Fixed-20260716-release-pr-title.yaml  issue-21.yaml  update-check.yaml
.github/workflows/: changie-release.yml  ci.yml  pr.yml  publish-homebrew-tap.yml  release-plz.yml  release.yml
.impeccable/: design.json
docs/: DESIGN.md
src/: changelog.rs  changie.rs  config.rs  git.rs  gleam.rs  hex.rs  lockfile.rs  main.rs  rewrite.rs  runner.rs  tools.rs  update_check.rs  workspace.rs
src/commands/: changelog.rs  ci.rs  doctor.rs  exec.rs  graph.rs  info.rs  list.rs  lockfile.rs  mod.rs  new.rs  publish.rs  release.rs  run.rs  tag.rs  version.rs
tests/: cli.rs  configless.rs  member_discovery.rs  new_and_release.rs  phase2.rs  phase3.rs
tests/fixtures/basic/: gleam.toml  workspace.toml
tests/fixtures/basic/examples/: gleam.toml
tests/fixtures/basic/examples/package-a/: gleam.toml
website/: astro.config.mjs  package.json  pnpm-lock.yaml
website/scripts/: generate-og.ts
website/src/components/: Callout.astro
website/src/components/starlight/: ThemeProvider.astro  ThemeSelect.astro
website/src/content/docs/: 404.md
website/src/content/docs/docs/: changelog.mdx  ci.mdx  configuration.mdx  index.mdx  installation.mdx  publishing.mdx  reference.md  task-running.mdx
website/src/layouts/: Base.astro  Docs.astro
website/src/lib/: version.ts
website/src/pages/: index.astro
website/src/pages/docs/: changelog.astro  ci.astro  configuration.astro  installation.astro  publishing.astro  task-running.astro
website/src/styles/: ec.css  global.css  starlight.css  tokens.css
