[package]
name = "trellis"
version = "0.1.0"
edition = "2024"
description = "A workspace CLI for Gleam monorepos: task fan-out, introspection, and release orchestration derived from workspace.toml and gleam.toml"
license = "MIT"
repository = "https://github.com/tylerbutler/trellis"

[profile.release]
strip = true
lto = true

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
glob = "0.3.3"
globset = "0.4.18"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
toml_edit = "0.25.12"
ureq = { version = "3.3.0", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
